[package]
name = "arbi-mango-bot1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
anyhow = "1.0"
tokio = { version = "1.14.1", features = ["rt-multi-thread", "time", "macros", "sync"] }
tokio-tungstenite = { version = "0.17.2" }
url = "2.3.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
