[package]
name = "mango-v4-arbi-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arbi-bot"
path = "src/main.rs"

[dependencies]
solana-client = "~1.16.14"
solana-logger = "~1.16.14"
solana-sdk = "~1.16.14"

anchor-lang = "0.28.0"
anchor-client = "0.28.0"

mango-feeds-connector = "0.2.0"

#mango-v4 = { git = "https://github.com/blockworks-foundation/mango-v4.git", features = ["client"], branch = "release/program-v0.20" }
mango-v4-client = { git = "https://github.com/blockworks-foundation/mango-v4.git",  branch = "release/program-v0.20" }

# note: we use a patched version of serum-dex to expose iterators - the mango program still uses the version 0.5.10+updates (commit c85e56d)
# 'groovie/v0.5.10-updates-expose-things' is a merge between https://github.com/jup-ag/openbook-program/tree/feat/expose-things and commit c85e56d
serum_dex = { git = "https://github.com/grooviegermanikus/program.git", branch = "groovie/v0.5.10-updates-expose-things" }

fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }

clap = { version = "3.1.8", features = ["derive", "env"] }

bs58 = "0.3.1"
log = "0.4"
env_logger = "0.9.0"
anyhow = "1.0"
toml = "0.5"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
futures-channel = "0.3"
futures-util = "0.3"
ws = "^0.9.2"
async-channel = "1.6"
async-trait = "0.1"
bytemuck = "^1.7.2"
itertools = "0.10.3"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"

[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }

